# rinha-backend-24q1-solution-py

./: .gitignore  Dockerfile  Makefile  actions.py  client.http  db_pool.py  docker-compose.yml  gunicorn.conf.py  init.sql  main.py  pyproject.toml
