[tool.poetry]
name = "rinha-backend-24q1-solution-py"
version = "0.1.0"
description = ""
authors = ["quatroka <monteiro.leonardosantos@gmail.com>"]
readme = "README.md"
packages = [{include = "rinha_backend_24q1_solution_py"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}
psycopg = {extras = ["binary", "pool"], version = "^3.1.18"}
gunicorn = "^21.2.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff.format]
quote-style = "single"
indent-style = "space"